--- a/src/main/resources/components/mainScreen.fxml
+++ b/src/main/resources/components/mainScreen.fxml
@@ -4,6 +4,9 @@
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="org.nevertouchgrass.prolific.javafxcontroller.MainScreenController"
-            prefHeight="400.0" prefWidth="1280.0">
-    <fx:include fx:id="headerComponent" source="../components/header.fxml" />
+            prefHeight="1080.0" prefWidth="1980.0"
+            stylesheets="@../css/styles.css"
+            styleClass="mainBG"
+            fx:id="mainScreen">
+    <fx:include fx:id="headerComponent" source="../components/header.fxml"/>
 </AnchorPane>
