--- a/src/main/resources/components/mainScreen.fxml
+++ b/src/main/resources/components/mainScreen.fxml
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.layout.AnchorPane?>
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="org.nevertouchgrass.prolific.javafxcontroller.MainScreenController"
-            prefHeight="1080.0" prefWidth="1980.0"
-            stylesheets="@../css/styles.css"
-            styleClass="mainBG"
-            fx:id="mainScreen">
-    <fx:include fx:id="headerComponent" source="../components/header.fxml"/>
+
+<AnchorPane fx:id="mainScreen" prefHeight="1080.0" prefWidth="1980.0" styleClass="mainBG" stylesheets="@../css/styles.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.nevertouchgrass.prolific.javafxcontroller.MainScreenController">
+    <fx:include fx:id="headerComponent" source="../components/header.fxml" />
+    <fx:include fx:id="projectsPanel" source="../components/projectsPanel.fxml" AnchorPane.leftAnchor="250.0" AnchorPane.topAnchor="250.0" />
 </AnchorPane>
