--- a/src/main/resources/css/styles.css
+++ b/src/main/resources/css/styles.css
@@ -11,6 +11,45 @@
     -fx-pref-height: 40px;
 }
 
+.circle-close {
+    -fx-fill: #FF3B30;
+    -fx-scale-x: 1.2;
+    -fx-scale-y: 1.2;
+}
+
+.circle-close:hover {
+    -fx-fill: #9E9E9E;
+}
+
+.circle-minimize {
+    -fx-fill: #FDB60D;
+    -fx-scale-x: 1.2;
+    -fx-scale-y: 1.2;
+}
+
+.circle-minimize:hover {
+    -fx-fill: #9E9E9E;
+}
+
+.circle-maximize {
+    -fx-fill: #1EBD70;
+    -fx-scale-x: 1.2;
+    -fx-scale-y: 1.2;
+}
+
+.circle-maximize:hover {
+    -fx-fill: #A6B3C1;
+}
+
+.icon-button {
+    -fx-background-color: transparent;
+    -fx-padding: 10px;
+}
+
+.icon-button:hover {
+    -fx-background-color: rgba(90, 155, 213, 0.3);
+}
+
 #projectIcon {
     -fx-background-color: linear-gradient(to bottom, #E08855 0%, #E9806F 100%);
     -fx-background-radius: 4px;
