--- a/src/main/resources/components/header.fxml
+++ b/src/main/resources/components/header.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Text?>
-<AnchorPane id="header" fx:id="header" prefHeight="40.0" prefWidth="1280.0" stylesheets="@../css/styles.css"
+<AnchorPane id="header" fx:id="header" stylesheets="@../css/styles.css"
             xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="org.nevertouchgrass.prolific.javafxcontroller.HeaderController"
             onMouseClicked="#handleHeaderMaximize">
@@ -19,8 +19,8 @@
             <StackPane styleClass="icon-button">
                 <fx:include source="../icons/fxml/folder.fxml"/>
             </StackPane>
-            <StackPane styleClass="icon-button" onMouseClicked="#dropdownForSettings">
-                <fx:include fx:id="settingsButton" source="../icons/fxml/settings.fxml" />
+            <StackPane fx:id="settingsButton" styleClass="icon-button" onMouseClicked="#dropdownForSettings">
+                <fx:include source="../icons/fxml/settings.fxml" />
             </StackPane>
         </children>
         <padding>
