--- a/src/main/resources/components/settingsDropdown.fxml
+++ b/src/main/resources/components/settingsDropdown.fxml
@@ -7,7 +7,7 @@
 
 <AnchorPane id="settingsDropdown" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <VBox prefHeight="73.0" prefWidth="85.0" spacing="5.0" styleClass="popup" stylesheets="@../css/styles.css">
+      <VBox spacing="5.0" styleClass="popup" stylesheets="@../css/styles.css">
          <children>
             <Button alignment="CENTER_LEFT" maxWidth="Infinity" mnemonicParsing="false" text="Settings..." textAlignment="JUSTIFY">
                <opaqueInsets>
