--- a/src/main/resources/components/projectPanel.fxml
+++ b/src/main/resources/components/projectPanel.fxml
@@ -1,64 +1,52 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-<HBox id="projectPanel"
-      fx:id="projectPanel"
-      alignment="CENTER_LEFT"
-      prefHeight="40.0" prefWidth="800.0" stylesheets="@../css/styles.css" xmlns="http://javafx.com/javafx/23.0.1"
-      xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="org.nevertouchgrass.prolific.javafxcontroller.ProjectPanelController"
->
-    <children>
-        <VBox id="gradientBox" alignment="CENTER_LEFT" prefHeight="200.0" prefWidth="275.0"
+
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.Label?>
+<HBox id="gradientBox" fx:id="projectPanel" alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="800.0"
+      stylesheets="@../css/styles.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="org.nevertouchgrass.prolific.javafxcontroller.ProjectPanelController">
+    <AnchorPane fx:id="gradientBox" id="gradienBox" maxHeight="200" prefHeight="200.0" prefWidth="275.0" stylesheets="@../css/styles.css">
+        <HBox fx:id="projectInfo" alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="492.0" spacing="20.0"
               stylesheets="@../css/styles.css">
-            <children>
-                <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="223.0" spacing="5.0"
-                      stylesheets="@../css/styles.css">
-                    <children>
-                        <HBox id="projectIcon" alignment="CENTER" stylesheets="@../css/styles.css">
-                            <children>
-                                <Text fill="WHITE" fx:id="projectIconText" strokeType="OUTSIDE" strokeWidth="0.0"
-                                      text="IJ" textAlignment="CENTER">
-                                    <font>
-                                        <Font name="JetBrainsMono NF Regular" size="13.0"/>
-                                    </font>
-                                </Text>
-                            </children>
-                            <HBox.margin>
-                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
-                            </HBox.margin>
-                        </HBox>
-                        <Text fill="WHITE" strokeType="OUTSIDE" fx:id="projectTitleText" strokeWidth="0.0"
-                              text="Poject Name">
-                            <HBox.margin>
-                                <Insets right="10.0"/>
-                            </HBox.margin>
-                        </Text>
-                        <VBox alignment="CENTER" prefHeight="40.0" prefWidth="40.0">
-                            <children>
-                                <fx:include source="../icons/fxml/runButton.fxml"/>
-                            </children>
-                            <HBox.margin>
-                                <Insets/>
-                            </HBox.margin>
-                        </VBox>
-                        <VBox alignment="CENTER" prefHeight="40.0" prefWidth="38.0">
-                            <children>
-                                <fx:include source="../icons/fxml/configurationButton.fxml" HBox.hgrow="ALWAYS"/>
-                            </children>
-                        </VBox>
-                    </children>
-                    <VBox.margin>
-                        <Insets left="5.0" right="10.0"/>
-                    </VBox.margin>
-                </HBox>
-            </children>
+            <VBox.margin>
+                <Insets left="5.0" right="10.0"/>
+            </VBox.margin>
+            <HBox.margin>
+                <Insets/>
+            </HBox.margin>
+            <HBox styleClass="projectIcon" fx:id="projectIcon" id="projectIcon" alignment="CENTER" maxWidth="50.0" minWidth="50.0" prefWidth="50.0"
+                  stylesheets="@../css/styles.css" HBox.hgrow="NEVER">
+                <HBox.margin>
+                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                </HBox.margin>
+                <Text fx:id="projectIconText" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="IJ"
+                      textAlignment="CENTER">
+                    <font>
+                        <Font name="JetBrainsMono NF Regular" size="13.0"/>
+                    </font>
+                </Text>
+            </HBox>
+            <Label fx:id="projectTitleText" textFill="WHITE"
+                   text="ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff">
+                <HBox.margin>
+                    <Insets right="10.0"/>
+                </HBox.margin>
+            </Label>
+        </HBox>
+        <VBox fx:id="run" alignment="CENTER" prefHeight="40.0" prefWidth="40.0">
+            <HBox.margin>
+                <Insets/>
+            </HBox.margin>
+            <fx:include source="../icons/fxml/runButton.fxml"/>
         </VBox>
-    </children>
+        <VBox fx:id="config" alignment="CENTER" prefHeight="40.0" prefWidth="67.0">
+            <fx:include source="../icons/fxml/configurationButton.fxml" HBox.hgrow="ALWAYS"/>
+        </VBox>
+    </AnchorPane>
 </HBox>
