--- a/src/main/resources/css/styles.css
+++ b/src/main/resources/css/styles.css
@@ -9,11 +9,13 @@
 
 #gradientBox {
     -fx-background-color: linear-gradient(from 0% 0% to 100% 0%,
-    #344C7D00 0%,
-    #344C7D 50%,
-    #344C7D00 100%);
+    #2B2D30 0%,
+    #344C7D 16.5%,
+    #2B2D30 33.0%,
+    #2B2D30 100%);
     -fx-pref-height: 40px;
 }
+
 
 .circle-close {
     -fx-fill: #FF3B30;
@@ -54,7 +56,7 @@
     -fx-background-color: rgba(90, 155, 213, 0.3);
 }
 
-#projectIcon {
+.projectIcon {
     -fx-background-color: linear-gradient(to bottom, #E08855 0%, #E9806F 100%);
     -fx-background-radius: 4px;
     -fx-pref-height: 20px;
@@ -121,16 +123,17 @@
 .button:hover {
     -fx-background-color: #3466B8;
 }
+
 .scroll-bar .increment-arrow,
-.scroll-bar .decrement-arrow{
+.scroll-bar .decrement-arrow {
     -fx-shape: " ";
     -fx-padding: 0.15em 0.0;
 }
 
 .scroll-bar:vertical .increment-arrow,
-.scroll-bar:vertical .decrement-arrow{
+.scroll-bar:vertical .decrement-arrow {
     -fx-shape: " ";
-    -fx-padding:0.0 0.15em;
+    -fx-padding: 0.0 0.15em;
 }
 
 .scroll-pane > .scroll-bar {
@@ -164,7 +167,7 @@
 }
 
 .scroll-bar:horizontal .thumb:hover,
-.scroll-bar:vertical .thumb:hover{
+.scroll-bar:vertical .thumb:hover {
     -fx-background-color: rgba(255, 255, 255, 0.3);
     -fx-background-insets: 2.0, 0.0, 0.0;
 }
