--- a/src/main/resources/components/projectPanel.fxml
+++ b/src/main/resources/components/projectPanel.fxml
@@ -8,11 +8,11 @@
 
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.control.Label?>
-<HBox id="gradientBox" fx:id="projectPanel" alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="800.0"
+<HBox id="gradientBox" fx:id="projectPanel" alignment="CENTER_LEFT" prefHeight="40.0"
       stylesheets="@../css/styles.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1"
       fx:controller="org.nevertouchgrass.prolific.javafxcontroller.ProjectPanelController">
-    <AnchorPane fx:id="gradientBox" id="gradienBox" maxHeight="200" prefHeight="200.0" prefWidth="275.0" stylesheets="@../css/styles.css">
-        <HBox fx:id="projectInfo" alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="492.0" spacing="20.0"
+    <AnchorPane fx:id="gradientBox" id="gradienBox" maxHeight="200" prefHeight="200.0" stylesheets="@../css/styles.css">
+        <HBox fx:id="projectInfo" alignment="CENTER_LEFT" prefHeight="40.0" spacing="20.0"
               stylesheets="@../css/styles.css">
             <VBox.margin>
                 <Insets left="5.0" right="10.0"/>
