--- a/src/main/resources/css/styles.css
+++ b/src/main/resources/css/styles.css
@@ -1,6 +1,7 @@
 .root {
     -fx-background-color: #1E1F22;
     -fx-font-size: 12px;
+    -fx-pref-height: 16px;
 }
 
 #header {
@@ -158,7 +159,7 @@
     -fx-background-color: transparent;
 }
 .scroll-pane {
-    -fx-pref-height: 50em;
+    -fx-pref-height: 40em;
 }
 
 .scroll-bar:vertical .thumb {
