Refactor FXML and CSS files for improved layout and styling; remove unnecessary annotations in FxmlProvider

--- a/src/main/resources/css/styles.css
+++ b/src/main/resources/css/styles.css
@@ -6,6 +6,7 @@
 
 #header {
     -fx-background-color: #2B2D30;
+    -fx-font-size: 1.25em;
 }
 
 #gradientBox {
@@ -50,7 +51,7 @@
 
 .icon-button {
     -fx-background-color: transparent;
-    -fx-padding: 10px;
+    -fx-background-radius: 8;
 }
 
 .icon-button:hover {
