--- a/src/main/resources/components/header.fxml
+++ b/src/main/resources/components/header.fxml
@@ -1,31 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Text?>
-<AnchorPane id="header" fx:id="header" stylesheets="@../css/styles.css"
-            xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="org.nevertouchgrass.prolific.javafxcontroller.HeaderController"
-            onMouseClicked="#handleHeaderMaximize">
+<?import javafx.geometry.Insets?>
+<AnchorPane id="header" fx:id="header" onMouseClicked="#handleHeaderMaximize" stylesheets="@../css/styles.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.nevertouchgrass.prolific.javafxcontroller.HeaderController">
 
     <!-- Left section with controls -->
-    <HBox id="gradientBox" fx:id="leftSection" alignment="CENTER_LEFT" layoutX="1.0" spacing="10.0"
+    <HBox id="gradientBox" fx:id="leftSection" alignment="CENTER_LEFT" layoutX="1.0" spacing="16"
           AnchorPane.leftAnchor="1.0" AnchorPane.topAnchor="0.0">
-        <children>
-            <Circle fx:id="closeButton" fill="transparent" onMouseClicked="#handleClose" radius="5.5" styleClass="circle-close"/>
-            <Circle fx:id="minimizeButton" fill="transparent" onMouseClicked="#handleMinimize" radius="5.5" styleClass="circle-minimize" />
-            <Circle fx:id="maximizeButton" fill="transparent" onMouseClicked="#handleMaximize" radius="5.5" styleClass="circle-maximize" />
+        <padding>
+            <Insets left="16" right="8"/>
+        </padding>
+        <Circle fx:id="closeButton" fill="transparent" onMouseClicked="#handleClose" radius="5.5"
+                styleClass="circle-close"/>
+        <Circle fx:id="minimizeButton" fill="transparent" onMouseClicked="#handleMinimize" radius="5.5"
+                styleClass="circle-minimize"/>
+        <Circle fx:id="maximizeButton" fill="transparent" onMouseClicked="#handleMaximize" radius="5.5"
+                styleClass="circle-maximize"/>
+        <HBox>
             <StackPane styleClass="icon-button">
-                <fx:include source="../icons/fxml/folder.fxml"/>
+                <fx:include source="/icons/fxml/folder.fxml"/>
             </StackPane>
             <StackPane fx:id="settingsButton" styleClass="icon-button" onMouseClicked="#dropdownForSettings">
-                <fx:include source="../icons/fxml/settings.fxml" />
+                <fx:include source="/icons/fxml/settings.fxml"/>
             </StackPane>
-        </children>
-        <padding>
-            <Insets left="10.0" />
-        </padding>
+        </HBox>
     </HBox>
 
     <!-- Center section with title -->
