Refactor header layout in FXML for improved structure; update mouse event handling in HeaderController and adjust ProjectScannerServiceTests path

--- a/src/main/resources/css/styles.css
+++ b/src/main/resources/css/styles.css
@@ -169,6 +169,7 @@
     -fx-background-radius: 0.0em;
     -fx-pref-height: 5px;
     -fx-max-height: 5px;
+    -fx-pref-width: 20px;
 }
 
 .scroll-bar:horizontal .thumb:hover,
