--- a/src/main/resources/components/header.fxml
+++ b/src/main/resources/components/header.fxml
@@ -1,41 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.Circle?>
-<?import javafx.scene.text.Text?>
-<?import javafx.geometry.Insets?>
-<AnchorPane id="header" fx:id="header" onMouseClicked="#handleHeaderMaximize" stylesheets="@../css/styles.css"
-            xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="org.nevertouchgrass.prolific.javafxcontroller.HeaderController">
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
+
+<AnchorPane id="header" fx:id="header" onMouseClicked="#handleHeaderMaximize" stylesheets="@/css/styles.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.nevertouchgrass.prolific.javafxcontroller.HeaderController">
 
     <!-- Left section with controls -->
-    <HBox id="gradientBox" fx:id="leftSection" alignment="CENTER_LEFT" layoutX="1.0" spacing="16"
-          AnchorPane.leftAnchor="1.0" AnchorPane.topAnchor="0.0">
+    <HBox id="gradientBox" fx:id="gradientBox" alignment="CENTER_LEFT" layoutX="1.0" spacing="16" AnchorPane.leftAnchor="1.0" AnchorPane.topAnchor="0.0">
         <padding>
-            <Insets left="16" top="4" bottom="4"/>
+            <Insets bottom="4" left="16" top="4" />
         </padding>
         <children>
-            <HBox spacing="10" alignment="CENTER_LEFT">
-                <Circle fx:id="closeButton" fill="transparent" onMouseClicked="#handleClose" radius="5"
-                        styleClass="circle-close"/>
-                <Circle fx:id="minimizeButton" fill="transparent" onMouseClicked="#handleMinimize" radius="5"
-                        styleClass="circle-minimize"/>
-                <Circle fx:id="maximizeButton" fill="transparent" onMouseClicked="#handleMaximize" radius="5"
-                        styleClass="circle-maximize"/>
+            <HBox alignment="CENTER_LEFT" spacing="10">
+                <Circle fx:id="closeButton" fill="transparent" onMouseClicked="#handleClose" radius="5" styleClass="circle-close" />
+                <Circle fx:id="minimizeButton" fill="transparent" onMouseClicked="#handleMinimize" radius="5" styleClass="circle-minimize" />
+                <Circle fx:id="maximizeButton" fill="transparent" onMouseClicked="#handleMaximize" radius="5" styleClass="circle-maximize" />
             </HBox>
             <HBox>
-                <StackPane styleClass="icon-button" onMouseClicked="#projects">
-                    <fx:include source="/icons/fxml/folder.fxml"/>
+                <StackPane onMouseClicked="#projects" styleClass="icon-button">
+                    <fx:include source="/icons/fxml/folder.fxml" />
                 </StackPane>
-                <StackPane fx:id="settingsButton" styleClass="icon-button" onMouseClicked="#dropdownForSettings">
-                    <fx:include source="/icons/fxml/settings.fxml"/>
+                <StackPane fx:id="settingsButton" onMouseClicked="#dropdownForSettings" styleClass="icon-button">
+                    <fx:include source="/icons/fxml/settings.fxml" />
                 </StackPane>
             </HBox>
         </children>
     </HBox>
 
     <!-- Center section with title -->
-    <Text fx:id="titleText" fill="#ebecf0" strokeType="OUTSIDE" strokeWidth="0.0" text="Projects Manager" AnchorPane.leftAnchor="500.0" AnchorPane.rightAnchor="684.61376953125" AnchorPane.topAnchor="10.0" />
+    <Text fx:id="titleText" fill="#ebecf0" strokeType="OUTSIDE" strokeWidth="0.0" text="Projects Manager" AnchorPane.leftAnchor="500.0" AnchorPane.rightAnchor="500.0" AnchorPane.topAnchor="10.0" />
 
     <!-- Right section as an empty Region -->
     <Region fx:id="rightSection" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0" />
