--- a/src/main/resources/components/header.fxml
+++ b/src/main/resources/components/header.fxml
@@ -8,25 +8,27 @@
 <AnchorPane id="header" fx:id="header" onMouseClicked="#handleHeaderMaximize" stylesheets="@/css/styles.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.nevertouchgrass.prolific.javafxcontroller.HeaderController">
 
     <!-- Left section with controls -->
-    <HBox id="gradientBox" fx:id="gradientBox" alignment="CENTER_LEFT" layoutX="1.0" spacing="16" AnchorPane.leftAnchor="1.0" AnchorPane.topAnchor="0.0">
+    <HBox id="gradientBox" fx:id="gradientBox" alignment="CENTER_LEFT" layoutX="1.0" spacing="16"
+          AnchorPane.leftAnchor="1.0" AnchorPane.topAnchor="0.0">
         <padding>
-            <Insets bottom="4" left="16" top="4" />
+            <Insets bottom="4" left="16" top="4"/>
         </padding>
-        <children>
-            <HBox alignment="CENTER_LEFT" spacing="10">
-                <Circle fx:id="closeButton" fill="transparent" onMouseClicked="#handleClose" radius="5" styleClass="circle-close" />
-                <Circle fx:id="minimizeButton" fill="transparent" onMouseClicked="#handleMinimize" radius="5" styleClass="circle-minimize" />
-                <Circle fx:id="maximizeButton" fill="transparent" onMouseClicked="#handleMaximize" radius="5" styleClass="circle-maximize" />
-            </HBox>
-            <HBox>
-                <StackPane onMouseClicked="#projects" styleClass="icon-button">
-                    <fx:include source="/icons/fxml/folder.fxml" />
-                </StackPane>
-                <StackPane fx:id="settingsButton" onMouseClicked="#dropdownForSettings" styleClass="icon-button">
-                    <fx:include source="/icons/fxml/settings.fxml" />
-                </StackPane>
-            </HBox>
-        </children>
+        <HBox alignment="CENTER_LEFT" spacing="10">
+            <Circle fx:id="closeButton" fill="transparent" onMouseClicked="#handleClose" radius="5"
+                    styleClass="circle-close"/>
+            <Circle fx:id="minimizeButton" fill="transparent" onMouseClicked="#handleMinimize" radius="5"
+                    styleClass="circle-minimize"/>
+            <Circle fx:id="maximizeButton" fill="transparent" onMouseClicked="#handleMaximize" radius="5"
+                    styleClass="circle-maximize"/>
+        </HBox>
+        <HBox>
+            <StackPane onMouseClicked="#projects" styleClass="icon-button">
+                <fx:include source="/icons/fxml/folder.fxml"/>
+            </StackPane>
+            <StackPane fx:id="settingsButton" onMouseClicked="#dropdownForSettings" styleClass="icon-button">
+                <fx:include source="/icons/fxml/settings.fxml"/>
+            </StackPane>
+        </HBox>
     </HBox>
 
     <!-- Center section with title -->
