--- a/src/main/resources/components/header.fxml
+++ b/src/main/resources/components/header.fxml
@@ -25,10 +25,10 @@
             </HBox>
             <HBox>
                 <StackPane styleClass="icon-button" onMouseClicked="#projects">
-                    <fx:include source="/icons/fxml/folder.fxml"/>
+                    <fx:include source="../icons/fxml/folder.fxml"/>
                 </StackPane>
                 <StackPane fx:id="settingsButton" styleClass="icon-button" onMouseClicked="#dropdownForSettings">
-                    <fx:include source="/icons/fxml/settings.fxml"/>
+                    <fx:include source="../icons/fxml/settings.fxml"/>
                 </StackPane>
             </HBox>
         </children>
