--- a/src/main/resources/components/projectPanel.fxml
+++ b/src/main/resources/components/projectPanel.fxml
@@ -1,53 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.control.Label?>
-<HBox id="gradientBox" fx:id="projectPanel" VBox.vgrow="ALWAYS"
-      alignment="CENTER_LEFT" maxHeight="40.0"
-      stylesheets="@../css/styles.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="org.nevertouchgrass.prolific.javafxcontroller.ProjectPanelController">
-    <AnchorPane fx:id="gradientBox" id="gradienBox" stylesheets="@../css/styles.css">
-        <HBox fx:id="projectInfo" alignment="CENTER_LEFT" prefHeight="40.0" spacing="20.0"
-              stylesheets="@../css/styles.css">
-            <VBox.margin>
-                <Insets left="5.0" right="10.0"/>
-            </VBox.margin>
+<?import javafx.geometry.Insets?>
+<AnchorPane id="gradientBox" fx:id="gradientBox" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="org.nevertouchgrass.prolific.javafxcontroller.ProjectPanelController">
+    <HBox fx:id="projectInfo" alignment="CENTER_LEFT" spacing="20.0" stylesheets="/css/styles.css">
+        <HBox fx:id="projectIcon" alignment="CENTER" prefWidth="20.0" spacing="10.0" stylesheets="/css/styles.css" styleClass="projectIcon">
             <HBox.margin>
-                <Insets/>
+                <Insets left="10.0" right="10.0" top="10.0" bottom="10.0"/>
             </HBox.margin>
-            <HBox styleClass="projectIcon" fx:id="projectIcon" id="projectIcon" alignment="CENTER" maxWidth="50.0" minWidth="50.0" prefWidth="50.0"
-                  stylesheets="@../css/styles.css" HBox.hgrow="NEVER">
-                <HBox.margin>
-                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
-                </HBox.margin>
-                <Text fx:id="projectIconText" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="IJ"
-                      textAlignment="CENTER">
-                    <font>
-                        <Font name="JetBrainsMono NF Regular" size="13.0"/>
-                    </font>
-                </Text>
-            </HBox>
-            <Label fx:id="projectTitleText" textFill="WHITE"
-                   text="ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff">
-                <HBox.margin>
-                    <Insets right="10.0"/>
-                </HBox.margin>
-            </Label>
+            <Text fx:id="projectIconText" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="IJ"
+                  textAlignment="CENTER">
+                <font>
+                    <Font name="JetBrainsMono NF Regular"/>
+                </font>
+            </Text>
         </HBox>
-        <VBox fx:id="run" alignment="CENTER" prefHeight="40.0" prefWidth="40.0">
-            <HBox.margin>
-                <Insets/>
-            </HBox.margin>
-            <fx:include source="../icons/fxml/runButton.fxml"/>
-        </VBox>
-        <VBox fx:id="config" alignment="CENTER" prefHeight="40.0" prefWidth="67.0">
-            <fx:include source="../icons/fxml/configurationButton.fxml" HBox.hgrow="ALWAYS"/>
-        </VBox>
-    </AnchorPane>
-</HBox>
+        <Label fx:id="projectTitleText" text="test" textFill="WHITE"/>
+        <fx:include source="/icons/fxml/runButton.fxml"/>
+        <fx:include source="/icons/fxml/configurationButton.fxml" HBox.hgrow="ALWAYS"/>
+    </HBox>
+</AnchorPane>
