--- a/src/main/resources/components/star.fxml
+++ b/src/main/resources/components/star.fxml
@@ -9,5 +9,6 @@
             fx:id="star"
             content="M16.0005 3L19.439 11.2673L28.3642 11.9828L21.5641 17.8077L23.6417 26.5172L16.0005 21.85L8.35924 26.5172L10.4368 17.8077L3.63672 11.9828L12.5619 11.2673L16.0005 3Z"
             fill="#F2C55C"
+            styleClass="star"
     />
 </StackPane>
