--- a/src/main/resources/components/header.fxml
+++ b/src/main/resources/components/header.fxml
@@ -12,11 +12,11 @@
 
         <Label fx:id="titleText" textFill="#ebecf0" text="Projects Manager" textAlignment="CENTER"/>
 
-        <HBox id="gradientBox" fx:id="leftSection" alignment="CENTER_LEFT" layoutX="1.0" spacing="16">
+        <HBox id="gradientBox" fx:id="leftSection" alignment="CENTER_LEFT" spacing="12" fillHeight="false">
             <padding>
                 <Insets left="16"/>
             </padding>
-            <HBox spacing="10" alignment="CENTER_LEFT" fillHeight="false">
+            <HBox spacing="10">
                 <Circle fx:id="closeButton" fill="transparent" onMouseClicked="#handleClose" radius="5"
                         styleClass="circle-close"/>
                 <Circle fx:id="minimizeButton" fill="transparent" onMouseClicked="#handleMinimize" radius="5"
@@ -25,9 +25,6 @@
                         styleClass="circle-maximize"/>
             </HBox>
             <HBox>
-                <padding>
-                    <Insets top="4" bottom="4"/>
-                </padding>
                 <StackPane styleClass="icon-button" onMouseClicked="#projects">
                     <fx:include source="/icons/fxml/folder.fxml"/>
                 </StackPane>
@@ -37,5 +34,4 @@
             </HBox>
         </HBox>
     </StackPane>
-
 </AnchorPane>
