--- a/src/main/resources/css/styles.css
+++ b/src/main/resources/css/styles.css
@@ -173,7 +173,11 @@
     -fx-font-family: "JetBrains Mono";
 }
 
-* {
-    -fx-border-width: 1px;
-    -fx-border-color: red;
+.star:hover {
+    -fx-fill: #9e9e9e;
 }
+
+/** {*/
+/*    -fx-border-width: 1px;*/
+/*    -fx-border-color: red;*/
+/*}*/
