--- a/src/main/resources/components/projectsPanel.fxml
+++ b/src/main/resources/components/projectsPanel.fxml
@@ -1,19 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.VBox?>
-
 <ScrollPane fx:id="scrollPane" fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" hmax="0.0"
             nodeOrientation="RIGHT_TO_LEFT" styleClass="mainBG" stylesheets="@/css/styles.css"
             xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="org.nevertouchgrass.prolific.javafxcontroller.ProjectsPanelController">
-    <padding>
-        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-    </padding>
-
-    <VBox fx:id="content" alignment="CENTER_LEFT" nodeOrientation="LEFT_TO_RIGHT" spacing="10.0" styleClass="mainBG">
-    </VBox>
-
-
+    <VBox fx:id="content" alignment="CENTER_LEFT" nodeOrientation="LEFT_TO_RIGHT" spacing="10.0" styleClass="mainBG"/>
 </ScrollPane>
