--- a/src/main/resources/components/projectPanel.fxml
+++ b/src/main/resources/components/projectPanel.fxml
@@ -1,33 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-<AnchorPane id="gradienBox" styleClass="projectPanel" fx:id="projectPanel" prefWidth="100.0"
+<AnchorPane styleClass="projectPanel" fx:id="projectPanel"
             stylesheets="@/css/styles.css" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="org.nevertouchgrass.prolific.javafxcontroller.ProjectPanelController">
-    <HBox fx:id="projectInfo" alignment="CENTER_LEFT" spacing="20.0" stylesheets="@/css/styles.css" AnchorPane.rightAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0">
-        <HBox id="projectIcon" fx:id="projectIcon" alignment="CENTER" styleClass="projectIcon"
-              stylesheets="@/css/styles.css" HBox.hgrow="NEVER">
+    <HBox fx:id="projectInfo"  stylesheets="@/css/styles.css" alignment="CENTER_LEFT"
+          AnchorPane.leftAnchor="0.0" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0" spacing="20.0">
+        <padding>
+            <Insets left="16.0" top="4.0" bottom="4.0"/>
+        </padding>
+        <HBox id="projectIcon" fx:id="projectIcon" alignment="CENTER" styleClass="projectIcon">
             <Label fx:id="projectIconText" textFill="WHITE"
-                  textAlignment="CENTER">
+                   textAlignment="CENTER">
                 <font>
                     <Font name="JetBrainsMono NF Regular" size="13.0"/>
                 </font>
             </Label>
         </HBox>
-        <Label fx:id="projectTitleText" textFill="WHITE">
-            <HBox.margin>
-                <Insets right="10.0"/>
-            </HBox.margin>
-        </Label>
+        <Label fx:id="projectTitleText" textFill="WHITE" styleClass="label"/>
+        <HBox alignment="CENTER_RIGHT" spacing="4.0" HBox.hgrow="ALWAYS">
+            <StackPane fx:id="run" styleClass="icon-button">
+                <fx:include source="/icons/fxml/runButton.fxml"/>
+            </StackPane>
+            <StackPane fx:id="config" onMouseClicked="#showProjectSetting" styleClass="icon-button">
+                <fx:include source="/icons/fxml/configurationButton.fxml"/>
+            </StackPane>
+        </HBox>
     </HBox>
-    <VBox fx:id="run" alignment="CENTER" prefHeight="40.0" prefWidth="40.0">
-        <fx:include source="/icons/fxml/runButton.fxml"/>
-    </VBox>
-    <VBox fx:id="config" onMouseClicked="#showProjectSetting" alignment="CENTER" prefHeight="40.0" prefWidth="67.0">
-        <fx:include source="/icons/fxml/configurationButton.fxml" HBox.hgrow="ALWAYS"/>
-    </VBox>
-    <fx:include fx:id="star" source="star.fxml" HBox.hgrow="ALWAYS"/>
+    <fx:include fx:id="star" source="star.fxml" AnchorPane.rightAnchor="16.0" AnchorPane.topAnchor="0.0" AnchorPane.bottomAnchor="0.0"/>
 </AnchorPane>
