--- a/src/main/resources/components/projectsPanel.fxml
+++ b/src/main/resources/components/projectsPanel.fxml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
-<ScrollPane fx:id="scrollPane" fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" hmax="0.0"
-            nodeOrientation="RIGHT_TO_LEFT" styleClass="mainBG" stylesheets="@/css/styles.css"
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="org.nevertouchgrass.prolific.javafxcontroller.ProjectsPanelController">
-    <VBox fx:id="content" alignment="CENTER_LEFT" nodeOrientation="LEFT_TO_RIGHT" spacing="10.0" styleClass="mainBG"/>
-</ScrollPane>
+<?import javafx.scene.layout.Region?>
+<StackPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.nevertouchgrass.prolific.javafxcontroller.ProjectsPanelController"
+           stylesheets="@/css/styles.css">
+    <ScrollPane fx:id="scrollPane" fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" hmax="0.0"
+                nodeOrientation="RIGHT_TO_LEFT" styleClass="mainBG">
+        <VBox fx:id="content" alignment="CENTER_LEFT" nodeOrientation="LEFT_TO_RIGHT" spacing="10.0" styleClass="mainBG"/>
+    </ScrollPane>
+    <Region fx:id="upperShadow" styleClass="upper-shadow" mouseTransparent="true"/>
+    <Region fx:id="lowerShadow" styleClass="lower-shadow" mouseTransparent="true"/>
+</StackPane>
