--- a/src/main/resources/components/projectPanel.fxml
+++ b/src/main/resources/components/projectPanel.fxml
@@ -7,7 +7,7 @@
 <AnchorPane styleClass="projectPanel" fx:id="projectPanel"
             stylesheets="@/css/styles.css" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="org.nevertouchgrass.prolific.javafxcontroller.ProjectPanelController">
-    <HBox fx:id="projectInfo"  stylesheets="@/css/styles.css" alignment="CENTER_LEFT"
+    <HBox fx:id="projectInfo" alignment="CENTER_LEFT"
           AnchorPane.leftAnchor="0.0" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0" spacing="20.0">
         <padding>
             <Insets left="16.0" top="4.0" bottom="4.0"/>
@@ -22,14 +22,12 @@
         </HBox>
         <Label fx:id="projectTitleText" textFill="WHITE" styleClass="label"/>
         <HBox alignment="CENTER_RIGHT" spacing="4.0" HBox.hgrow="ALWAYS">
-            <HBox alignment="CENTER" spacing="10" styleClass="icon-button" onMouseClicked="#showProjectConfigurations">
+            <HBox fx:id="controlPanel" alignment="CENTER" spacing="10" styleClass="icon-button" onMouseClicked="#showProjectConfigurations">
                 <padding>
                     <Insets top="4" bottom="4" left="6" right="6"/>
                 </padding>
-                <StackPane>
-                    <fx:include source="/icons/fxml/gradle_icon.fxml"/>
-                </StackPane>
-                <Label>Gradle</Label>
+                <fx:include source="/icons/fxml/gradle_icon.fxml"/>
+                <Label fx:id="configurationName" styleClass="label" textOverrun="CENTER_ELLIPSIS"/>
                 <fx:include fx:id="configurationButton" source="/icons/fxml/unfold_button.fxml"/>
             </HBox>
             <StackPane fx:id="run" styleClass="icon-button">
