--- a/src/main/resources/components/projectsPanel.fxml
+++ b/src/main/resources/components/projectsPanel.fxml
@@ -11,8 +11,8 @@
               styleClass="mainBG">
         </VBox>
     </ScrollPane>
-    <Region fx:id="upperShadow" prefHeight="40" styleClass="upper-shadow" mouseTransparent="true"
-            StackPane.alignment="TOP_CENTER" visible="false"/>
-    <Region fx:id="lowerShadow" prefHeight="40" styleClass="lower-shadow" mouseTransparent="true"
+    <Region fx:id="upperShadow" styleClass="upper-shadow" mouseTransparent="true"
+            StackPane.alignment="TOP_CENTER"/>
+    <Region fx:id="lowerShadow" styleClass="lower-shadow" mouseTransparent="true"
             StackPane.alignment="BOTTOM_CENTER"/>
 </StackPane>
