--- a/src/main/resources/components/settingsDropdown.fxml
+++ b/src/main/resources/components/settingsDropdown.fxml
@@ -1,30 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.geometry.Insets?>
-<AnchorPane id="settingsDropdown" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="org.nevertouchgrass.prolific.javafxcontroller.SettingsDropdownController">
-    <VBox spacing="5.0" styleClass="popup" stylesheets="@/css/styles.css">
-        <padding>
-            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
-        </padding>
-        <Button maxWidth="Infinity" mnemonicParsing="false" text="Settings..." textAlignment="JUSTIFY">
-            <opaqueInsets>
-                <Insets/>
-            </opaqueInsets>
-        </Button>
-        <Button maxWidth="Infinity" onMouseClicked="#rescan" mnemonicParsing="false" text="Run scanning"
-                textAlignment="JUSTIFY">
-            <opaqueInsets>
-                <Insets/>
-            </opaqueInsets>
-        </Button>
-        <Button maxWidth="Infinity" mnemonicParsing="false" text="Plugins" textAlignment="JUSTIFY">
-            <opaqueInsets>
-                <Insets/>
-            </opaqueInsets>
-        </Button>
-    </VBox>
-</AnchorPane>
+<VBox id="settingsDropdown" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="org.nevertouchgrass.prolific.javafxcontroller.SettingsDropdownController" stylesheets="@/css/styles.css">
+    <Label maxWidth="Infinity" text="Settings..." textAlignment="JUSTIFY"/>
+    <Label maxWidth="Infinity" onMouseClicked="#rescan" text="Run scanning" textAlignment="JUSTIFY"/>
+    <Label maxWidth="Infinity" text="Plugins" textAlignment="JUSTIFY"/>
+</VBox>
