--- a/src/main/resources/components/projectPanel.fxml
+++ b/src/main/resources/components/projectPanel.fxml
@@ -30,6 +30,7 @@
                     <HBox.margin>
                         <Insets topRightBottomLeft="4"/>
                     </HBox.margin>
+                    <fx:include source="/icons/fxml/settings.fxml"/>
                 </StackPane>
                 <Label fx:id="configurationName" styleClass="label" textOverrun="CENTER_ELLIPSIS"/>
                 <fx:include fx:id="configurationButton" source="/icons/fxml/unfold_button.fxml"/>
