--- a/src/main/resources/css/styles.css
+++ b/src/main/resources/css/styles.css
@@ -159,6 +159,53 @@
     -fx-background-color: transparent;
 }
 
+.split-pane {
+    -fx-background-color: transparent;
+}
+
+.split-pane-divider {
+    -fx-background-color: transparent;
+    -fx-padding: 16px;
+}
+
+.text-area {
+    -fx-background-color: transparent;
+    -fx-text-fill: #DFE1E5;
+}
+
+.text-area .content {
+    -fx-background-color: #2B2D30;
+    -fx-background-radius: 0;
+}
+
+.text-area .scroll-pane {
+    -fx-background-color: #2B2D30;
+    -fx-hbar-policy: as-needed;
+    -fx-vbar-policy: as-needed;
+}
+
+.text-area .scroll-pane .scroll-bar .thumb {
+    -fx-background-color: rgba(255, 255, 255, 0.2);
+    -fx-background-radius: 0;
+    -fx-opacity: 1;
+}
+
+.text-area .scroll-pane .scroll-bar:horizontal .increment-arrow,
+.text-area .scroll-pane .scroll-bar:horizontal .decrement-arrow  {
+    -fx-shape: " ";
+    -fx-padding: 0.25em 0;
+}
+
+.text-area .scroll-pane .scroll-bar:vertical .increment-arrow,
+.text-area .scroll-pane .scroll-bar:vertical .decrement-arrow  {
+    -fx-shape: " ";
+    -fx-padding: 0 0.25em;
+}
+
+.text-area .scroll-pane .corner {
+    -fx-background-color: transparent;
+}
+
 .scroll-shadow {
     -fx-background-color: linear-gradient(to bottom, rgba(30, 31, 34, 0.5), rgb(30, 31, 34));
     -fx-pref-height: 30px;
@@ -176,7 +223,10 @@
     -fx-background-radius: 0 0 16 16;
 }
 
-
+.separator .line {
+    -fx-border-color: #1E1F22;
+    -fx-border-width: 1;
+}
 
 .scroll-bar:vertical .thumb {
     -fx-background-color: rgba(255, 255, 255, 0.2);
