--- a/src/main/resources/components/mainScreen.fxml
+++ b/src/main/resources/components/mainScreen.fxml
@@ -5,8 +5,9 @@
             fx:controller="org.nevertouchgrass.prolific.javafxcontroller.MainScreenController"
             stylesheets="@/css/styles.css"
             fx:id="mainScreen">
-    <fx:include fx:id="headerComponent" source="/components/header.fxml" AnchorPane.leftAnchor="0"
+    <fx:include source="/components/header.fxml" AnchorPane.leftAnchor="0"
                 AnchorPane.rightAnchor="0"/>
     <fx:include source="projectsPanel.fxml" fx:id="projectsPanel" AnchorPane.topAnchor="128"
                 AnchorPane.leftAnchor="16" AnchorPane.bottomAnchor="64"/>
+    <fx:include source="footer.fxml"  AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0"/>
 </AnchorPane>
