--- a/src/main/resources/icons/fxml/bigStopButton.fxml
+++ b/src/main/resources/icons/fxml/bigStopButton.fxml
@@ -1,21 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.Group?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.shape.Rectangle?>
-<StackPane fx:id="pane" xmlns:fx="http://javafx.com/fxml/1" stylesheets="@/css/styles.css">
-    <Group>
-        <Rectangle id="icon"
-                   y="5" width="19.5" height="20"
-                   arcWidth="8" arcHeight="8"
-                   fill="#C94F4F"/>
-        <Rectangle x="4.75" y="10" width="10" height="10"
-                   arcWidth="2" arcHeight="2"
-                   fill="transparent" stroke="white" strokeWidth="1.5"/>
-    </Group>
-    <HBox.margin>
-        <Insets bottom="4" left="8" right="8" top="4"/>
-    </HBox.margin>
+<StackPane fx:id="pane" xmlns:fx="http://javafx.com/fxml/1" stylesheets="@/css/styles.css" styleClass="stop-button">
+    <Rectangle x="0.5" y="0.5" width="12" height="12" fill="TRANSPARENT" stroke="#FFF7F7" strokeWidth="1.5" arcHeight="2" arcWidth="2"/>
+    <padding>
+        <Insets top="6" bottom="6" right="10" left="10"/>
+    </padding>
 </StackPane>
