--- a/src/main/resources/icons/fxml/runButton.fxml
+++ b/src/main/resources/icons/fxml/runButton.fxml
@@ -2,17 +2,16 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Group?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.shape.SVGPath?>
 <?import javafx.scene.layout.StackPane?>
-<StackPane xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1">
+<?import javafx.scene.shape.SVGPath?>
+<StackPane xmlns="http://javafx.com/javafx/17.0.12" styleClass="icon-button">
     <Group>
         <SVGPath
                 content="M13.125 7.91747C13.9583 8.39859 13.9583 9.60141 13.125 10.0825L2.625 16.1447C1.79167 16.6258 0.750001 16.0244 0.750001 15.0622L0.750002 2.93782C0.750002 1.97557 1.79167 1.37417 2.625 1.85529L13.125 7.91747Z"
                 fill="TRANSPARENT" stroke="#5FAD65" strokeWidth="1.5">
         </SVGPath>
     </Group>
-    <HBox.margin>
-        <Insets bottom="6" left="10" right="10" top="6"/>
-    </HBox.margin>
+    <padding>
+        <Insets top="6" bottom="6" right="10" left="10"/>
+    </padding>
 </StackPane>
