--- a/src/main/resources/components/logsAndMetricsPanel.fxml
+++ b/src/main/resources/components/logsAndMetricsPanel.fxml
@@ -1,37 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.Region?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="org.nevertouchgrass.prolific.javafxcontroller.LogsAndMetricsPanelController"
             stylesheets="@/css/styles.css">
     <top>
-        <HBox spacing="4" style="-fx-background-color: #2B2D30; -fx-border-width: 0 0 2 0; -fx-border-color: #1E1F22">
+        <HBox spacing="4" styleClass="logs-header" alignment="CENTER">
             <padding>
-                <Insets top="4" bottom="4" right="8" left="8"/>
+                <Insets top="12" bottom="12" right="16" left="16"/>
             </padding>
-            <Label text="You have 0 running projects"/>
+            <Label text="You have 0 running projects" styleClass="running-projects-label"/>
             <Region HBox.hgrow="ALWAYS"/>
-            <Label text="V Prolific(1)"/>
+            <HBox fx:id="projectLogsDropdown" spacing="10" styleClass="project-logs-dropdown" onMouseClicked="#switchConfigurationButtonIcon">
+                <padding>
+                    <Insets top="4" bottom="4" left="8" right="8"/>
+                </padding>
+                <Label fx:id="chosenProject"/>
+                <Region HBox.hgrow="ALWAYS"/>
+                <fx:include fx:id="foldButton" source="/icons/fxml/unfold_button.fxml"/>
+            </HBox>
         </HBox>
     </top>
     <center>
         <TextArea fx:id="logsAndMetrics" editable="false"/>
     </center>
     <bottom>
-        <HBox spacing="8" style="-fx-background-color: #2B2D30; -fx-border-width: 2 0 0 0; -fx-border-color: #1E1F22">
+        <HBox styleClass="logs-footer">
             <padding>
-                <Insets top="4" bottom="4" right="8" left="8"/>
+                <Insets top="12" bottom="12" right="16" left="16"/>
             </padding>
-            <Label text="Logs" styleClass="icon-button"/>
-            <Separator orientation="VERTICAL"/>
-            <Label text="Metrics" styleClass="icon-button"/>
+            <HBox styleClass="logs-button-container">
+                <Label fx:id="logsButton" text="Logs" styleClass="logs-button-selected" onMouseClicked="#switchLogsButtonStyle"/>
+                <Label fx:id="metricsButton" text="Metrics" styleClass="logs-button" onMouseClicked="#switchLogsButtonStyle"/>
+            </HBox>
         </HBox>
     </bottom>
 </BorderPane>
