--- a/src/main/resources/components/logsAndMetricsPanel.fxml
+++ b/src/main/resources/components/logsAndMetricsPanel.fxml
@@ -3,39 +3,44 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<BorderPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="org.nevertouchgrass.prolific.javafxcontroller.LogsAndMetricsPanelController"
-            stylesheets="@/css/styles.css">
-    <top>
-        <HBox spacing="4" styleClass="logs-header" alignment="CENTER">
+<?import javafx.scene.text.Text?>
+<?import javafx.scene.text.TextFlow?>
+<VBox xmlns="http://javafx.com/javafx"
+      xmlns:fx="http://javafx.com/fxml"
+      fx:controller="org.nevertouchgrass.prolific.javafxcontroller.LogsAndMetricsPanelController"
+      stylesheets="@/css/styles.css">
+
+    <HBox spacing="4" styleClass="logs-header" alignment="CENTER">
+        <padding>
+            <Insets top="12" bottom="12" right="16" left="16"/>
+        </padding>
+        <Label fx:id="runningProjects" text="You have 0 running projects" styleClass="running-projects-label" textOverrun="CENTER_ELLIPSIS"/>
+        <Region HBox.hgrow="ALWAYS"/>
+        <HBox fx:id="projectLogsDropdown" spacing="10" styleClass="project-logs-dropdown" onMouseClicked="#showRunningProjects">
             <padding>
-                <Insets top="12" bottom="12" right="16" left="16"/>
+                <Insets top="4" bottom="4" left="8" right="8"/>
             </padding>
-            <Label fx:id="runningProjects" text="You have 0 running projects" styleClass="running-projects-label"/>
+            <Label fx:id="chosenProject"/>
             <Region HBox.hgrow="ALWAYS"/>
-            <HBox fx:id="projectLogsDropdown" spacing="10" styleClass="project-logs-dropdown" onMouseClicked="#showRunningProjects">
-                <padding>
-                    <Insets top="4" bottom="4" left="8" right="8"/>
-                </padding>
-                <Label fx:id="chosenProject"/>
-                <Region HBox.hgrow="ALWAYS"/>
-                <fx:include fx:id="foldButton" source="/icons/fxml/unfold_button.fxml"/>
-            </HBox>
+            <fx:include fx:id="foldButton" source="/icons/fxml/unfold_button.fxml"/>
         </HBox>
-    </top>
-    <center>
-        <TextArea fx:id="logsAndMetrics" editable="false"/>
-    </center>
-    <bottom>
-        <HBox styleClass="logs-footer">
-            <padding>
-                <Insets top="12" bottom="12" right="16" left="16"/>
-            </padding>
-            <HBox styleClass="logs-button-container">
-                <Label fx:id="logsButton" text="Logs" styleClass="logs-button-selected" onMouseClicked="#switchLogsButtonStyle"/>
-                <Label fx:id="metricsButton" text="Metrics" styleClass="logs-button" onMouseClicked="#switchLogsButtonStyle"/>
-            </HBox>
+    </HBox>
+
+    <HBox VBox.vgrow="ALWAYS">
+        <ScrollPane fx:id="scrollPane" styleClass="scroll-pane" fitToHeight="true" HBox.hgrow="ALWAYS">
+            <TextFlow fx:id="logsAndMetrics" styleClass="text-flow">
+                <Text text="Choose project first" styleClass="log-text"/>
+            </TextFlow>
+        </ScrollPane>
+    </HBox>
+
+    <HBox styleClass="logs-footer">
+        <padding>
+            <Insets top="12" bottom="12" right="16" left="16"/>
+        </padding>
+        <HBox styleClass="logs-button-container">
+            <Label fx:id="logsButton" text="Logs" styleClass="logs-button-selected" onMouseClicked="#switchLogsButtonStyle"/>
+            <Label fx:id="metricsButton" text="Metrics" styleClass="logs-button" onMouseClicked="#switchLogsButtonStyle"/>
         </HBox>
-    </bottom>
-</BorderPane>
+    </HBox>
+</VBox>
