--- a/src/main/resources/components/projectsPanel.fxml
+++ b/src/main/resources/components/projectsPanel.fxml
@@ -5,7 +5,7 @@
 <StackPane xmlns:fx="http://javafx.com/fxml/1"
            fx:controller="org.nevertouchgrass.prolific.javafxcontroller.ProjectsPanelController"
            stylesheets="@/css/styles.css">
-    <ScrollPane fx:id="scrollPane" fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" hmax="0.0"
+    <ScrollPane fx:id="scrollPane" fitToHeight="true" fitToWidth="true" style="-fx-hbar-policy: never;" hmax="0.0"
                 nodeOrientation="RIGHT_TO_LEFT" styleClass="mainBG">
         <VBox fx:id="content" alignment="CENTER_LEFT" nodeOrientation="LEFT_TO_RIGHT" spacing="10.0"
               styleClass="mainBG">
